# jnirun

./: .gitignore  Makefile.am  README.md  configure.ac  hadoop.hdfs.run  jnirun  jnirun.hadoop
