# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([jnirun], [1.0.0], [fanyunfeng@sina.com])

AM_INIT_AUTOMAKE

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
